--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -16,6 +16,7 @@
     class="example-sidenav"
     [mode]="drawerMode"
     [opened]="sideNavOpened"
+    autoFocus="false"
   >
     <app-side-nav
       *ngIf="userData"
