--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="sidenav-toolbar">
-  <div class="toolbar-header">
+  <div class="toolbar-header edit">
     <div class="toolbar-logo">
       <img src="./assets/img/Workspace logo.png" alt="" />
       <span>Devspace</span>
