--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -50,7 +50,14 @@
     }
   }
 
+  .edit {
+    @media only screen and (max-width: 992px) {
+      display: none !important;
+    }
+  }
+
   app-search-bar {
+    margin-top: 25px;
     width: 100%;
 
     @media only screen and (min-width: 992px) {
