Navigate to main page button added to side-nav

--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -120,3 +120,12 @@
     </mat-expansion-panel>
   </div>
 </div>
+
+<button
+  mat-icon-button
+  class="main-page-button button-primary"
+  routerLink="."
+  (click)="activeButtonService.setActiveButton(''); closeNavOnClick()"
+>
+  <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
+</button>
