add-users-to new channel edited

--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.scss
@@ -65,6 +65,7 @@
 
   .button-primary {
     align-self: flex-end;
+    width: fit-content !important;
 
     &:disabled {
       cursor: not-allowed !important;
