--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
@@ -38,113 +38,16 @@
     --mdc-radio-selected-pressed-icon-color: var(--purple1-color) !important;
     --mat-radio-checked-ripple-color: var(--purple1-color) !important;
   }
-
-  // .mat-mdc-form-field-subscript-wrapper {
-  //   display: none !important;
-  // }
-
-  // .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-  //   background-color: var(--white-color) !important;
-  // }
-
-  // .mat-mdc-text-field-wrapper:hover .mat-mdc-form-field-focus-overlay {
-  //   opacity: 0 !important;
-  // }
-
-  // .mat-mdc-form-field-focus-overlay {
-  //   background-color: unset !important;
-  // }
-
-  // .mdc-evolution-chip-set .mdc-evolution-chip-set__chips {
-  //   margin-left: 0 !important;
-  // }
-
-  // .mat-mdc-standard-chip:not(.mdc-evolution-chip--disabled) {
-  //   background-color: var(--bg-color) !important;
-  // }
-
-  // mat-icon,
-  // mat-icon.mat-primary,
-  // mat-icon.mat-accent,
-  // mat-icon.mat-warn {
-  //   color: var(--grey-color);
-  // }
-
-  // .mat-mdc-chip.mdc-evolution-chip--with-trailing-action
-  //   .mat-mdc-chip-action-label {
-  //   display: flex;
-  //   align-items: center;
-  //   gap: 8px;
-  // }
-
-  // .mat-mdc-dialog-container-with-actions .mat-mdc-dialog-content {
-  //   padding: 10px 0 4px 0 !important;
-  // }
-
-  // .mat-mdc-chip-remove .mat-icon {
-  //   width: 10px;
-  //   height: 10px;
-  //   font-size: 16px;
-  //   box-sizing: content-box;
-  //   color: black;
-  //   font-weight: bold;
-
-  //   &:hover {
-  //     color: var(--purple1-color);
-  //   }
-  // }
-
-  // .mat-mdc-option .mdc-list-item__primary-text {
-  //   display: flex;
-  //   gap: 8px;
-  //   align-items: center;
-  //   img {
-  //     height: 30px;
-  //     width: 30px;
-  //     border-radius: 50%;
-  //   }
-  // }
-
-  // .mat-mdc-standard-chip .mdc-evolution-chip__cell--primary,
-  // .mat-mdc-standard-chip .mdc-evolution-chip__action--primary,
-  // .mat-mdc-standard-chip .mat-mdc-chip-action-label {
-  //   display: flex;
-  //   align-items: center;
-  //   gap: 8px;
-  // }
-
-  // .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above)
-  //   div.mat-mdc-autocomplete-panel {
-  //   border-radius: 20px !important;
-  //   border-top-left-radius: 0 !important;
-  // }
-
-  // .mat-mdc-autocomplete-panel-above div.mat-mdc-autocomplete-panel {
-  //   border-radius: 20px !important;
-  //   border-bottom-left-radius: 0 !important;
-  // }
-
-  // div.mat-mdc-autocomplete-panel.mat-mdc-autocomplete-visible {
-  //   padding-inline: 30px;
-  // }
-
-  // div.mat-mdc-autocomplete-panel {
-  //   width: 60% !important;
-  // }
-
-  // .mat-mdc-option.mdc-list-item {
-  //   border-radius: 40px;
-  // }
-
-  // .mat-mdc-option:hover:not(.mdc-list-item--disabled) {
-  //   background-color: var(--bg-color) !important;
-  // }
 }
 
 .dialog-wrapper {
   color: var(--black-color);
   padding: 40px;
   width: 710px;
+
+  @media screen and (max-width: 992px) {
+    width: 100%;
+  }
 
   .header-wrapper {
     display: flex;
@@ -214,5 +117,16 @@
 
   .badge.online {
     background-color: var(--online-color);
+  }
+}
+
+mat-dialog-actions {
+  .button-primary {
+    align-self: flex-end;
+    width: fit-content !important;
+
+    &:disabled {
+      cursor: not-allowed !important;
+    }
   }
 }
