--- a/src/app/main/side-nav/side-nav.component.html
+++ b/src/app/main/side-nav/side-nav.component.html
@@ -121,11 +121,13 @@
   </div>
 </div>
 
-<button
-  mat-icon-button
-  class="main-page-button button-primary"
-  routerLink="."
-  (click)="activeButtonService.setActiveButton(''); closeNavOnClick()"
->
-  <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
-</button>
+<div class="button-wrapper">
+  <button
+    mat-icon-button
+    class="main-page-button button-primary"
+    routerLink="."
+    (click)="activeButtonService.setActiveButton(''); closeNavOnClick()"
+  >
+    <mat-icon class="material-symbols-outlined">edit_square</mat-icon>
+  </button>
+</div>
