tablet side nav closes when click outside

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,11 @@
     >
   </button>
 </div>
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container
+  class="example-container"
+  (backdropClick)="closeSideNavOnMobile()"
+  autosize
+>
   <mat-drawer
     #drawer
     class="example-sidenav"
