--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -69,7 +69,8 @@
   z-index: 1;
 
   ::ng-deep.mat-drawer-backdrop.mat-drawer-shown {
-    visibility: hidden;
+    visibility: visible;
+    background-color: transparent;
   }
 
   .example-sidenav {
