--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -253,10 +253,9 @@
 }
 
 .button-wrapper {
-  .button-primary {
+  .main-page-button {
     width: 60px !important;
     height: 60px !important;
-    color: white !important;
     padding: unset !important;
   }
 }
