add-channel button apearance

--- a/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-new-member/channel-new-member.component.scss
@@ -67,12 +67,12 @@
     background-color: var(--bg-color) !important;
   }
 
-  mat-icon,
-  mat-icon.mat-primary,
-  mat-icon.mat-accent,
-  mat-icon.mat-warn {
-    color: var(--grey-color);
-  }
+  // mat-icon,
+  // mat-icon.mat-primary,
+  // mat-icon.mat-accent,
+  // mat-icon.mat-warn {
+  //   color: var(--grey-color);
+  // }
 
   .mat-mdc-chip.mdc-evolution-chip--with-trailing-action
     .mat-mdc-chip-action-label {
