--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -13,6 +13,7 @@
 <mat-drawer-container
   class="example-container"
   (backdropClick)="closeSideNavOnMobile()"
+  (keydown.escape)="closeSideNavOnMobile()"
   autosize
 >
   <mat-drawer
