--- a/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
+++ b/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
@@ -9,7 +9,7 @@
         *ngIf="user.userId != userData.uid"
         [attr.aria-label]="'remove ' + user"
       >
-        <mat-icon>close</mat-icon>
+        <mat-icon class="material-symbols-outlined close-icon">close</mat-icon>
       </button>
     </mat-chip-row>
     }
