--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,7 +111,7 @@ button,
   cursor: pointer !important;
   text-wrap: nowrap !important;
   font-weight: 700 !important;
-  color: var(--text-color) !important;
+  color: var(--text-color);
 
   border-radius: 100px !important;
   border-style: none !important;
