break long names in side-nav

--- a/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
+++ b/src/app/main/side-nav/create-channel-dialog/create-channel-dialog.component.html
@@ -20,6 +20,7 @@
       [(ngModel)]="channelName"
       name="channelName"
       (ngModelChange)="checkInputEmpty()"
+      maxlength="25"
     />
   </form>
   <h4>Beschreibung <span>(optional)</span></h4>
