--- a/src/app/landing-page/register/register.component.scss
+++ b/src/app/landing-page/register/register.component.scss
@@ -12,6 +12,8 @@
     justify-content: space-between;
     align-items: center;
 
+    gap: 30px;
+
     min-height: 60%;
     max-height: 80%;
     min-width: 25%;
@@ -75,7 +77,7 @@
     }
 
     .next-button {
-      width: 100%;
+      width: 50%;
       display: flex;
       justify-content: end;
     }
