--- a/src/app/main/side-nav/side-nav.component.scss
+++ b/src/app/main/side-nav/side-nav.component.scss
@@ -253,7 +253,7 @@
 
 .main-page-button {
   left: 80%;
-  bottom: 32px;
+  bottom: 6vh;
 
   @media only screen and (min-width: 600px) {
     display: none !important;
