--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.scss
@@ -1,58 +1,90 @@
 .description-container {
-    width: 100%;
-    min-height: 320px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 30px;
-    align-items: flex-start;
-    padding-bottom: 40px;
-  }
-  
-  .description-container-headline {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-  
-    span {
-      font-size: 18px;
-      font-weight: 700;
-    }
-  
-    button {
-      color: var(--purple3-color) !important;
-      border: none;
-      background-color: unset;
-      font-size: 18px;
-      font-weight: 400 !important;
-  
-      &:hover {
-        cursor: pointer;
-        font-weight: 600 !important;
-        color: var(--purple1-color) !important;
-      }
-    }
+  width: 100%;
+  min-height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 30px;
+  align-items: flex-start;
+  padding-bottom: 40px;
+}
+
+.description-container-headline {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  span {
+    font-size: 18px;
+    font-weight: 700;
   }
 
-  input {
-    padding: 16px;
+  button {
+    color: var(--purple3-color) !important;
+    border: none;
+    background-color: unset;
+    font-size: 18px;
+    font-weight: 400 !important;
+
+    &:hover {
+      cursor: pointer;
+      font-weight: 600 !important;
+      color: var(--purple1-color) !important;
+    }
   }
-  
-  .created-by-container {
+}
+
+.edit-icon-container {
+  width: 30px;
+  height: 30px;
+  background-color: var(--bg-color);
+  border-radius: 40px;
+  align-items: center;
+  justify-content: center;
+  display: none;
+
+  mat-icon {
+    color: var(--black-color);
+  }
+
+  &:hover {
+    cursor: pointer;
+
+    mat-icon {
+      color: var(--purple1-color);
+    }
+  }
+}
+
+input {
+  padding: 16px;
+}
+
+.created-by-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  padding-top: 50px;
+
+  span:first-of-type {
+    font-weight: 700 !important;
+  }
+
+  span:last-of-type {
+    font-weight: 400 !important;
+    font-size: 24px !important;
+    color: var(--purple3-color) !important;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .description-container-headline button {
+    display: none;
+  }
+
+  .edit-icon-container {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-    padding-top: 50px;
-  
-    span:first-of-type {
-      font-weight: 700 !important;
-    }
-  
-    span:last-of-type {
-      font-weight: 400 !important;
-      font-size: 24px !important;
-      color: var(--purple3-color) !important;
-    }
   }
+}
