--- a/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.scss
@@ -52,7 +52,11 @@ h2 {
   gap: 20px;
   border-radius: 30px;
   padding: 5px 20px;
+  max-width: 100%;
   width: fit-content;
+  white-space: nowrap; /* Verhindert Zeilenumbrüche */
+  overflow: hidden; /* Blendet überflüssigen Text aus */
+  text-overflow: ellipsis; /* Fügt "..." an, wenn der Text abgeschnitten wird */
 
   img {
     width: 50px;
