--- a/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
@@ -130,6 +130,9 @@ img {
 
 .name {
   font-weight: 700 !important;
+  white-space: nowrap; /* Verhindert Zeilenumbrüche */
+  overflow: hidden; /* Blendet überflüssigen Text aus */
+  text-overflow: ellipsis; /* Fügt "..." an, wenn der Text abgeschnitten wird */
 
   &:hover {
     cursor: pointer;
@@ -137,10 +140,12 @@ img {
   }
 }
 
+
 .time {
   color: var(--grey-color);
   font-size: 14px;
   align-self: center;
+  min-width: 64px;
 }
 
 .message {
@@ -156,7 +161,12 @@ img {
   > p {
     display: flex;
     justify-content: flex-start;
-    padding-left: 5px;
+    max-width: 100%;
+    flex-wrap: wrap; /* Ermöglicht den Zeilenumbruch */
+    word-wrap: break-word; /* Bricht lange Wörter */
+    overflow-wrap: break-word; /* Zusätzlicher Schutz für Zeilenumbrüche */
+    word-break: break-all;
+    hyphens: auto;
   }
 }
 
@@ -193,4 +203,26 @@ app-attachment-preview {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 400px) {
+  .name-and-time {
+    gap: 10px;
+  }
+
+  .message-container {
+    padding: 10px 5px;
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  img {
+    width: 60px;
+    height: 60px;
+  }
+
+  .message {
+    padding: 10px 12px;
+  }
 }
