--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
@@ -15,6 +15,9 @@
 
 .name {
   font-weight: 700 !important;
+  white-space: nowrap; /* Verhindert Zeilenumbrüche */
+  overflow: hidden; /* Blendet überflüssigen Text aus */
+  text-overflow: ellipsis; /* Fügt "..." an, wenn der Text abgeschnitten wird */
 
   &:hover {
     cursor: pointer;
@@ -26,6 +29,7 @@
   color: var(--grey-color);
   font-size: 14px;
   align-self: center;
+  min-width: 64px;
 }
 
 .message-own {
@@ -41,10 +45,12 @@
 
   > p {
     text-align: right;
-    padding-right: 5px;
-    word-wrap: break-word; /* Bricht lange Wörter um */
-    overflow-wrap: break-word; /* Alternative für Kompatibilität */
-    white-space: normal; /* Zeilenumbrüche erlauben */
+    max-width: 100%;
+    flex-wrap: wrap; /* Ermöglicht den Zeilenumbruch */
+    word-wrap: break-word; /* Bricht lange Wörter */
+    overflow-wrap: break-word; /* Zusätzlicher Schutz für Zeilenumbrüche */
+    word-break: break-all;
+    hyphens: auto;
   }
 }
 
@@ -62,4 +68,16 @@ app-attachment-preview {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 400px) {
+  .name-and-time-own {
+    gap: 10px;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .message-own {
+    padding: 10px 12px;
+  }
 }
