updating basics json and update responsiv view

--- a/src/app/landing-page/login/reset-password/new-password/new-password.component.scss
+++ b/src/app/landing-page/login/reset-password/new-password/new-password.component.scss
@@ -9,8 +9,14 @@
   mat-card {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
+
+    min-height: 60%;
+    max-height: 80%;
+    min-width: 25%;
+    max-width: 50%;
 
     text-align: center;
 
@@ -70,7 +76,7 @@
     }
 
     .next-button {
-      width: 100%;
+      width: 50%;
       display: flex;
       justify-content: end;
     }
