--- a/src/app/landing-page/login/reset-password/new-password/new-password.component_media.scss
+++ b/src/app/landing-page/login/reset-password/new-password/new-password.component_media.scss
@@ -50,12 +50,8 @@
   }
 
   .headline {
-    flex-direction: column;
-    gap: unset !important;
-
-    mat-icon {
-      justify-content: start !important;
-      width: 100%;
+    h1 {
+      text-wrap: unset !important;
     }
   }
 }
@@ -64,10 +60,6 @@
 @media only screen and (max-width: 768px) {
   .reset-password {
     justify-content: space-evenly !important;
-
-    mat-card {
-      min-height: 70% !important;
-    }
   }
 
   .logo-container {
