--- a/src/app/landing-page/login/reset-password/reset-password.component.scss
+++ b/src/app/landing-page/login/reset-password/reset-password.component.scss
@@ -9,8 +9,10 @@
   mat-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+
+    gap: 30px;
 
     min-height: 60%;
     max-height: 80%;
@@ -55,7 +57,7 @@
     }
 
     .next-button {
-      width: 100%;
+      width: 50%;
       display: flex;
       justify-content: end;
     }
