--- a/src/app/landing-page/register/register.component_media.scss
+++ b/src/app/landing-page/register/register.component_media.scss
@@ -31,6 +31,24 @@
 
   .register mat-card {
     padding: 35px;
+
+    .headline {
+      flex-direction: column;
+      gap: unset !important;
+
+      mat-icon {
+        justify-content: start !important;
+        width: 100%;
+      }
+
+      h1 {
+        font-size: var(--fontsize-32) !important;
+      }
+    }
+
+    p {
+      font-size: 16px !important;
+    }
   }
 }
 
